--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Contacts</h1>
+<h1>Contact(s)</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
