--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -21,10 +21,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td style="text-align:left;">
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            <td style="text-align:right;">
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
