--- a/Views/Contact/Details.cshtml
+++ b/Views/Contact/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Contact Details</h1>
 
 <div>
-    <h4>ContactModel</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
