--- a/Views/Contact/Edit.cshtml
+++ b/Views/Contact/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Contact</h1>
 
-<h4>ContactModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
