All tables implemented, create client code next

--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -22,6 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.linkedClients)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,22 +32,25 @@
 
         @foreach (var item in Model)
         {
-<tr>
-    <td style="text-align:left;">
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td style="text-align:left;">
-        @Html.DisplayFor(modelItem => item.Surname)
-    </td>
-    <td style="text-align:left;">
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td style="text-align:right;">
-        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-    </td>
-</tr>
+        <tr>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.Surname)
+            </td>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.linkedClients)
+            </td>
+            <td style="text-align:right;">
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
 }
 </table>
 }
