--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -16,6 +16,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.clientCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.linkedContacts)
+            </th>
+            <th></th>
             <th></th>
         </tr>
     </thead>
@@ -23,16 +30,22 @@
 
         @foreach (var item in Model)
         {
-<tr>
-    <td style="text-align:left;">
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td style="text-align:right;">
-        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-    </td>
-</tr>
+        <tr>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.clientCode)
+            </td>
+            <td style="text-align:left;">
+                @Html.DisplayFor(modelItem => item.linkedContacts)
+            </td>
+            <td style="text-align:right;">
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
 }
 
     </tbody>
