--- a/Views/CC/Edit.cshtml
+++ b/Views/CC/Edit.cshtml
@@ -1,22 +1,19 @@
-@model BusinessDirectoryApp.Models.ClientModel
+@model BusinessDirectoryApp.Models.ClientContact
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Client</h1>
+<h1>Edit</h1>
 
+<h4>ClientContact</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ClientID" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="ContactID" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
