--- a/Views/Client/Details.cshtml
+++ b/Views/Client/Details.cshtml
@@ -18,6 +18,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ClientID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
