--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -41,9 +41,9 @@
                 @Html.DisplayFor(modelItem => item.linkedContacts)
             </td>
             <td style="text-align:right;">
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ClientID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ClientID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ClientID">Delete</a>
             </td>
         </tr>
 }
