--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -14,10 +14,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Surname)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Surname)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -34,10 +34,10 @@
         {
         <tr>
             <td style="text-align:left;">
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Surname)
             </td>
             <td style="text-align:left;">
-                @Html.DisplayFor(modelItem => item.Surname)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td style="text-align:left;">
                 @Html.DisplayFor(modelItem => item.Email)
@@ -46,9 +46,9 @@
                 @Html.DisplayFor(modelItem => item.linkedClients)
             </td>
             <td style="text-align:right;">
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ContactID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ContactID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ContactID">Delete</a>
             </td>
         </tr>
 }
