--- a/Views/CC/Index.cshtml
+++ b/Views/CC/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Link Client <=> Contact</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -24,16 +24,14 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td style="text-align:left;">
                 @Html.DisplayFor(modelItem => item.Client.Name)
             </td>
-            <td>
+            <td style="text-align:left;">
                 @Html.DisplayFor(modelItem => item.Contact.Email)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            <td type="button" class ="btn btn-secondary" style="text-align:left;">
+                @Html.ActionLink("Unlink", "Delete", new { id = item.ClientID})
             </td>
         </tr>
 }
