--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">Contacts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CC" asp-action="Index">CC</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CC" asp-action="Index">Linking</a>
                         </li>
                     </ul>
                 </div>
