--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{ ViewData["Title"] = "Index"; }
 
-<h1>Client(s)</h1>
+<h1 class="PageTitle">Client(s)</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
@@ -42,7 +42,6 @@
             </td>
             <td style="text-align:right;">
                 <a asp-action="Edit" asp-route-id="@item.ClientID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClientID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ClientID">Delete</a>
             </td>
         </tr>
