--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="heading display-4">Welcome to the Business Directory App</h1>
+    <p>Create a custom directory, catalog or any other listing in a centralized database.
+    This application works for a variety of uses, where you can list clients and contacts.
+    It also allows you to link these entities.</p>
 </div>
