--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,11 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+h1 {
+    margin: 100px, 0;
+}
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -69,3 +74,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
